--- a/cabal-fmt.cabal
+++ b/cabal-fmt.cabal
@@ -35,7 +35,7 @@ library version-interval
   default-language: Haskell2010
   hs-source-dirs:   src-interval
   build-depends:
-    , base          ^>=4.11.1.0 || ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0 || ^>=4.15.0.0 || ^>=4.16.0.0 || ^>=4.17.0.0 || ^>=4.18.0.0
+    , base          ^>=4.11.1.0 || ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0 || ^>=4.15.0.0 || ^>=4.16.0.0 || ^>=4.17.0.0 || ^>=4.18.0.0 || ^>= 4.19.0.0
     , Cabal-syntax  ^>=3.10.1.0
 
   exposed-modules:  VersionInterval
@@ -46,8 +46,8 @@ library cabal-fmt-internal
 
   -- GHC boot libraries
   build-depends:
-    , base          ^>=4.11.1.0 || ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0 || ^>=4.15.0.0 || ^>=4.16.0.0 || ^>=4.17.0.0 || ^>=4.18.0.0
-    , bytestring    ^>=0.10.8.2 || ^>=0.11.3.1
+    , base          ^>=4.11.1.0 || ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0 || ^>=4.15.0.0 || ^>=4.16.0.0 || ^>=4.17.0.0 || ^>=4.18.0.0 || ^>= 4.19.0.0
+    , bytestring    ^>=0.10.8.2 || ^>=0.11.3.1 || ^>=0.12.0.2
     , Cabal-syntax  ^>=3.10.1.0
     , containers    ^>=0.5.11.0 || ^>=0.6.0.1
     , directory     ^>=1.3.1.5
