--- a/cabal-fmt.cabal
+++ b/cabal-fmt.cabal
@@ -31,18 +31,9 @@ source-repository head
   type:     git
   location: https://github.com/phadej/cabal-fmt.git
 
-library version-interval
-  default-language: Haskell2010
-  hs-source-dirs:   src-interval
-  build-depends:
-    , base          ^>=4.11.1.0 || ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0 || ^>=4.15.0.0 || ^>=4.16.0.0 || ^>=4.17.0.0 || ^>=4.18.0.0 || ^>= 4.19.0.0
-    , Cabal-syntax  ^>=3.10.1.0
-
-  exposed-modules:  VersionInterval
-
 library cabal-fmt-internal
   default-language: Haskell2010
-  hs-source-dirs:   src
+  hs-source-dirs:   src src-interval
 
   -- GHC boot libraries
   build-depends:
@@ -58,9 +49,6 @@ library cabal-fmt-internal
 
   if impl(ghc <8.10)
     build-depends: base-orphans ^>=0.9.1
-
-  -- our version interval normalisation
-  build-depends:    version-interval
 
   -- cabal-fmt: expand src
   exposed-modules:
@@ -85,6 +73,7 @@ library cabal-fmt-internal
     CabalFmt.Refactoring.Fragments
     CabalFmt.Refactoring.GlobFiles
     CabalFmt.Refactoring.Type
+    VersionInterval
 
   other-extensions:
     DeriveFunctor
@@ -149,6 +138,6 @@ test-suite version-interval-tests
     , tasty
     , tasty-hunit
     , tasty-quickcheck
-    , version-interval
+    , cabal-fmt-internal
 
 -- end file comment
