--- a/cabal-fmt.cabal
+++ b/cabal-fmt.cabal
@@ -33,7 +33,7 @@ source-repository head
 
 library cabal-fmt-internal
   default-language: Haskell2010
-  hs-source-dirs:   src src-interval
+  hs-source-dirs:   src
 
   -- GHC boot libraries
   build-depends:
