--- a/cabal-fmt.cabal
+++ b/cabal-fmt.cabal
@@ -31,7 +31,7 @@ source-repository head
   type:     git
   location: https://github.com/phadej/cabal-fmt.git
 
-library cabal-fmt-internal
+library
   default-language: Haskell2010
   hs-source-dirs:   src
 
@@ -96,7 +96,7 @@ executable cabal-fmt
   build-depends:
     , base
     , bytestring
-    , cabal-fmt-internal
+    , cabal-fmt
     , directory
     , filepath
 
@@ -113,7 +113,7 @@ test-suite golden
   build-depends:
     , base
     , bytestring
-    , cabal-fmt-internal
+    , cabal-fmt
     , Cabal-syntax
     , containers
 
@@ -138,6 +138,6 @@ test-suite version-interval-tests
     , tasty
     , tasty-hunit
     , tasty-quickcheck
-    , cabal-fmt-internal
+    , cabal-fmt
 
 -- end file comment
