--- a/cabal-fmt.cabal
+++ b/cabal-fmt.cabal
@@ -103,11 +103,14 @@ executable cabal-fmt
   -- extra dependencies
   build-depends:    optparse-applicative >=0.14.3.0 && <0.19
 
-test-suite golden
+test-suite cabal-fmt-test-suite
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   tests
-  main-is:          golden.hs
+  main-is:          Main.hs
+  other-modules:
+    CabalFmt.Test.Golden
+    CabalFmt.Test.Interval
 
   -- dependencies in library
   build-depends:
@@ -119,25 +122,17 @@ test-suite golden
 
   -- test dependencies
   build-depends:
-    , filepath
-    , process
-    , tasty
-    , tasty-golden
-    , temporary
-
-test-suite version-interval-tests
-  type:             exitcode-stdio-1.0
-  default-language: Haskell2010
-  hs-source-dirs:   tests-interval
-  main-is:          version-interval-tests.hs
-  build-depends:
     , base
     , Cabal-syntax
+    , filepath
     , integer-logarithms  ^>=1.0.3.1
+    , process
     , QuickCheck
     , tasty
+    , tasty-golden
     , tasty-hunit
     , tasty-quickcheck
+    , temporary
     , cabal-fmt
 
 -- end file comment
