--- a/cabal-fmt.cabal
+++ b/cabal-fmt.cabal
@@ -33,7 +33,7 @@ source-repository head
 
 library
   default-language: Haskell2010
-  hs-source-dirs:   src
+  hs-source-dirs:   source/library
 
   -- GHC boot libraries
   build-depends:
@@ -87,7 +87,7 @@ library
 
 executable cabal-fmt
   default-language: Haskell2010
-  hs-source-dirs:   cli
+  hs-source-dirs:   source/executable
   main-is:          Main.hs
   other-modules:    Paths_cabal_fmt
   autogen-modules:  Paths_cabal_fmt
@@ -106,7 +106,7 @@ executable cabal-fmt
 test-suite cabal-fmt-test-suite
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
-  hs-source-dirs:   tests
+  hs-source-dirs:   source/test-suite
   main-is:          Main.hs
   other-modules:
     CabalFmt.Test.Golden
