--- a/cabal-fmt.cabal
+++ b/cabal-fmt.cabal
@@ -91,8 +91,8 @@ executable cabal-fmt
   default-language: Haskell2010
   hs-source-dirs:   source/executable
   main-is:          Main.hs
-  other-modules:    Paths_cabal_fmt
-  autogen-modules:  Paths_cabal_fmt
+  other-modules:    PackageInfo_cabal_fmt
+  autogen-modules:  PackageInfo_cabal_fmt
 
   -- dependencies in library
   build-depends:
