--- a/cabal-fmt.cabal
+++ b/cabal-fmt.cabal
@@ -31,7 +31,7 @@ extra-source-files:
 
 source-repository head
   type:     git
-  location: https://github.com/phadej/cabal-fmt.git
+  location: https://github.com/tfausak/cabal-gild
 
 library
   default-language: Haskell2010
