--- a/fixtures/Cabal-notab.cabal
+++ b/fixtures/Cabal-notab.cabal
@@ -1,6 +1,6 @@
 name:          Cabal
 version:       2.5.0.0
--- cabal-fmt: no-tabular
+-- cabal-gild: no-tabular
 copyright:     2003-2018, Cabal Development Team (see AUTHORS file)
 license:       BSD3
 license-file:  LICENSE
