--- a/fixtures/fragment-empty.cabal
+++ b/fixtures/fragment-empty.cabal
@@ -4,7 +4,7 @@ version:             1
 
 library
   exposed-modules:     Example
-  -- cabal-fmt: fragment empty.fragment
+  -- cabal-gild: fragment empty.fragment
   build-depends:       base >=4.3 && <4.13
   hs-source-dirs:      src
   default-language:    Haskell2010
