--- a/fixtures/fragment-section.cabal
+++ b/fixtures/fragment-section.cabal
@@ -2,7 +2,7 @@ cabal-version:       2.4
 name:                fragment
 version:             1
 
--- cabal-fmt: fragment common.fragment
+-- cabal-gild: fragment common.fragment
 common deps
 
 library
