--- a/fixtures/fragment-wrong-type.cabal
+++ b/fixtures/fragment-wrong-type.cabal
@@ -4,7 +4,7 @@ version:             1
 
 library
   exposed-modules:     Example
-  -- cabal-fmt: fragment common.fragment
+  -- cabal-gild: fragment common.fragment
   build-depends:       base >=4.3 && <4.13
   hs-source-dirs:      src
   default-language:    Haskell2010
