--- a/fixtures/simple-example.cabal
+++ b/fixtures/simple-example.cabal
@@ -40,7 +40,7 @@ library
     cpp-options: -DFOOBAR
 
   if impl(ghc)
-    -- cabal-fmt: glob-files cbits/**/*.c
+    -- cabal-gild: glob-files cbits/**/*.c
     c-sources:
 
   -- empty interval
@@ -66,7 +66,7 @@ test-suite doctests
   type:                exitcode-stdio-1.0
   main-is:             doctests.hs
 
-  -- cabal-fmt: fragment build-depends.fragment
+  -- cabal-gild: fragment build-depends.fragment
   build-depends:
 
   ghc-options:         -Wall -threaded
