--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -11,16 +11,7 @@ description:
 license:            GPL-3.0-or-later AND BSD-3-Clause
 license-file:       LICENSE.txt
 author:             Oleg Grenrus <oleg.grenrus@iki.fi>
-maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
-tested-with:
-  GHC ==8.4.4
-   || ==8.6.5
-   || ==8.8.4
-   || ==8.10.7
-   || ==9.0.2
-   || ==9.2.7
-   || ==9.4.5
-   || ==9.6.1
+maintainer:         Taylor Fausak
 
 extra-doc-files:
   Changelog.md
@@ -33,13 +24,42 @@ source-repository head
   type:     git
   location: https://github.com/tfausak/cabal-gild
 
-library
+common library
+  build-depends:
+    , base ^>=4.19.0.0
   default-language: Haskell2010
+  ghc-options:
+    -Weverything
+    -Wno-all-missed-specialisations
+    -Wno-implicit-prelude
+    -Wno-missed-specialisations
+    -Wno-missing-deriving-strategies
+    -Wno-missing-export-lists
+    -Wno-missing-import-lists
+    -Wno-missing-kind-signatures
+    -Wno-missing-local-signatures
+    -Wno-missing-role-annotations
+    -Wno-missing-safe-haskell-mode
+    -Wno-monomorphism-restriction
+    -Wno-prepositive-qualified-module
+    -Wno-redundant-constraints
+    -Wno-safe
+    -Wno-term-variable-capture
+    -Wno-unsafe
+
+common executable
+  import: library
+
+  build-depends: cabal-gild
+  ghc-options: -rtsopts -threaded
+
+library
+  import: library
+
   hs-source-dirs:   source/library
 
   -- GHC boot libraries
   build-depends:
-    , base          ^>=4.11.1.0 || ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0 || ^>=4.15.0.0 || ^>=4.16.0.0 || ^>=4.17.0.0 || ^>=4.18.0.0 || ^>= 4.19.0.0
     , bytestring    ^>=0.10.8.2 || ^>=0.11.3.1 || ^>=0.12.0.2
     , Cabal-syntax  ^>=3.10.1.0
     , containers    ^>=0.5.11.0 || ^>=0.6.0.1
@@ -88,7 +108,8 @@ library
     ScopedTypeVariables
 
 executable cabal-gild
-  default-language: Haskell2010
+  import: executable
+
   hs-source-dirs:   source/executable
   main-is:          Main.hs
   other-modules:    PackageInfo_cabal_gild
@@ -96,18 +117,16 @@ executable cabal-gild
 
   -- dependencies in library
   build-depends:
-    , base
     , bytestring
-    , cabal-gild
-    , directory
     , filepath
 
   -- extra dependencies
   build-depends:    optparse-applicative >=0.14.3.0 && <0.19
 
 test-suite cabal-gild-test-suite
+  import: executable
+
   type:             exitcode-stdio-1.0
-  default-language: Haskell2010
   hs-source-dirs:   source/test-suite
   main-is:          Main.hs
   other-modules:
@@ -116,25 +135,18 @@ test-suite cabal-gild-test-suite
 
   -- dependencies in library
   build-depends:
-    , base
     , bytestring
-    , cabal-gild
     , Cabal-syntax
     , containers
 
   -- test dependencies
   build-depends:
-    , base
     , Cabal-syntax
     , filepath
     , integer-logarithms  ^>=1.0.3.1
-    , process
     , QuickCheck
     , tasty
-    , tasty-golden
     , tasty-hunit
     , tasty-quickcheck
-    , temporary
-    , cabal-gild
 
 -- end file comment
