--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -33,8 +33,8 @@ common library
     -Wno-missed-specialisations -Wno-missing-deriving-strategies
     -Wno-missing-export-lists -Wno-missing-import-lists
     -Wno-missing-kind-signatures -Wno-missing-role-annotations
-    -Wno-missing-safe-haskell-mode -Wno-monomorphism-restriction
-    -Wno-prepositive-qualified-module -Wno-safe -Wno-unsafe
+    -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module
+    -Wno-safe -Wno-unsafe
 
   if flag(pedantic)
     ghc-options: -Werror
