--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -26,15 +26,17 @@ flag pedantic
   manual:  True
 
 common library
-  build-depends:    base ^>=4.19.0.0
+  build-depends:    base ^>=4.18.2.0 || ^>=4.19.0.0
   default-language: Haskell2010
   ghc-options:
     -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude
     -Wno-missed-specialisations -Wno-missing-deriving-strategies
     -Wno-missing-export-lists -Wno-missing-import-lists
-    -Wno-missing-kind-signatures -Wno-missing-role-annotations
-    -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module
-    -Wno-safe -Wno-unsafe
+    -Wno-missing-kind-signatures -Wno-missing-safe-haskell-mode
+    -Wno-prepositive-qualified-module -Wno-safe -Wno-unsafe
+
+  if impl(ghc >=9.8)
+    ghc-options: -Wno-missing-role-annotations
 
   if flag(pedantic)
     ghc-options: -Werror
@@ -52,14 +54,14 @@ library
 
   -- GHC boot libraries
   build-depends:
-    , bytestring ^>=0.12.0.2
-    , Cabal-syntax ^>=3.10.2.0
-    , containers ^>=0.6.8
+    , bytestring ^>=0.11.5.3 || ^>=0.12.0.2
+    , Cabal-syntax ^>=3.10.1.0
+    , containers ^>=0.6.7
     , directory ^>=1.3.8.1
-    , filepath ^>=1.4.100.4
+    , filepath ^>=1.4.100.1
     , mtl ^>=2.3.1
     , optparse-applicative ^>=0.18.1.0
-    , parsec ^>=3.1.17.0
+    , parsec ^>=3.1.16.1
     , pretty ^>=1.1.3.6
 
   -- cabal-gild: expand source/library
