Also test against GHC 9.4.8

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -88,6 +88,11 @@
               "version": 13
             },
             {
+              "ghc": "9.4.8",
+              "platform": "ubuntu",
+              "version": 22.04
+            },
+            {
               "ghc": "9.6.4",
               "platform": "ubuntu",
               "version": 22.04
