--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -61,9 +61,9 @@ library
     , Cabal-syntax ^>=3.8.1.0 || ^>=3.10.1.0
     , containers ^>=0.6.7
     , directory ^>=1.3.7.1
+    , exceptions ^>=0.10.5
     , filepath ^>=1.4.2.2
     , mtl ^>=2.2.2 || ^>=2.3.1
-    , optparse-applicative ^>=0.18.1.0
     , parsec ^>=3.1.16.1
     , pretty ^>=1.1.3.6
 
