--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -1,120 +1,129 @@
-cabal-version:      2.2
-name:               cabal-gild
-version:            0.2.1.1
-synopsis:           Format .cabal files
-category:           Development
+cabal-version: 2.2
+name: cabal-gild
+version: 0.3.0.0
+category: Development
+synopsis: Formats package descriptions.
 description:
-  Format @.cabal@ files preserving the original field ordering, and comments.
-  .
-  Tuned for Oleg's preference, but has some knobs still.
+  cabal-gild is an opinionated formatter for Haskell package descriptions,
+  which are also known as @.cabal@ files.
 
-license:            GPL-3.0-or-later AND BSD-3-Clause
-license-file:       LICENSE.txt
-author:             Oleg Grenrus <oleg.grenrus@iki.fi>
-maintainer:         Taylor Fausak
+author: Taylor Fausak
+maintainer: Taylor Fausak
+license: MIT
+license-file: LICENSE.txt
 extra-doc-files:
   CHANGELOG.md
   README.md
 
-extra-source-files:
-  fixtures/*.cabal
-  fixtures/*.format
-
 source-repository head
-  type:     git
+  type: git
   location: https://github.com/tfausak/cabal-gild
 
 flag pedantic
   default: False
-  manual:  True
+  manual: True
 
 common library
-  build-depends:    base ^>=4.17.2.1 || ^>=4.18.2.0 || ^>=4.19.0.0
+  build-depends: base ^>=4.19.0.0
   default-language: Haskell2010
   ghc-options:
-    -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude
-    -Wno-missed-specialisations -Wno-missing-deriving-strategies
-    -Wno-missing-export-lists -Wno-missing-import-lists
-    -Wno-missing-kind-signatures -Wno-missing-safe-haskell-mode
-    -Wno-prepositive-qualified-module -Wno-safe -Wno-unsafe
+    -Weverything
+    -Wno-all-missed-specialisations
+    -Wno-implicit-prelude
+    -Wno-missed-specialisations
+    -Wno-missing-deriving-strategies
+    -Wno-missing-export-lists
+    -Wno-missing-import-lists
+    -Wno-missing-kind-signatures
+    -Wno-missing-safe-haskell-mode
+    -Wno-prepositive-qualified-module
+    -Wno-safe
+    -Wno-unsafe
 
-  if impl(ghc >=9.8)
+  if impl(ghc >= 9.8)
     ghc-options: -Wno-missing-role-annotations
 
   if flag(pedantic)
     ghc-options: -Werror
 
 common executable
-  import:        library
+  import: library
   build-depends: cabal-gild
-  ghc-options:   -rtsopts -threaded
+  ghc-options:
+    -rtsopts
+    -threaded
 
 library
-  import:          library
-  hs-source-dirs:  source/library
-  other-modules:   Paths_cabal_gild
+  import: library
+  hs-source-dirs: source/library
+  other-modules: Paths_cabal_gild
   autogen-modules: Paths_cabal_gild
-
-  -- GHC boot libraries
   build-depends:
-    , bytestring ^>=0.11.5.3 || ^>=0.12.0.2
-    , Cabal-syntax ^>=3.8.1.0 || ^>=3.10.1.0
-    , containers ^>=0.6.7
-    , directory ^>=1.3.7.1
-    , exceptions ^>=0.10.5
-    , filepath ^>=1.4.2.2
-    , mtl ^>=2.2.2 || ^>=2.3.1
-    , parsec ^>=3.1.16.1
-    , pretty ^>=1.1.3.6
+    Cabal-syntax ^>=3.10.2.0,
+    bytestring ^>=0.12.0.2,
+    containers ^>=0.6.8,
+    directory ^>=1.3.8.1,
+    exceptions ^>=0.10.7,
+    file-io ^>=0.1.1,
+    filepath ^>=1.4.100.4,
+    pretty ^>=1.1.3.6,
+    text ^>=2.1,
+    transformers ^>=0.6.1.0,
 
-  -- cabal-gild: expand source/library
+  -- cabal-gild: discover source/library
   exposed-modules:
-    CabalGild
-    CabalGild.Comments
-    CabalGild.Error
-    CabalGild.Fields
-    CabalGild.Fields.BuildDepends
-    CabalGild.Fields.Extensions
-    CabalGild.Fields.Modules
-    CabalGild.Fields.SourceFiles
-    CabalGild.Fields.TestedWith
-    CabalGild.FreeText
-    CabalGild.Glob
+    CabalGild.Action.AttachComments
+    CabalGild.Action.Discover
+    CabalGild.Action.ExtractComments
+    CabalGild.Action.Format
+    CabalGild.Action.GetCabalVersion
+    CabalGild.Action.Reindent
+    CabalGild.Action.RemovePositions
+    CabalGild.Action.Render
+    CabalGild.Class.MonadLog
+    CabalGild.Class.MonadRead
+    CabalGild.Class.MonadWalk
+    CabalGild.Class.MonadWrite
+    CabalGild.Exception.CheckFailure
+    CabalGild.Exception.InvalidMode
+    CabalGild.Exception.InvalidOption
+    CabalGild.Exception.UnexpectedArgument
+    CabalGild.Exception.UnknownOption
+    CabalGild.Extra.Either
+    CabalGild.Extra.Field
+    CabalGild.Extra.FieldLine
+    CabalGild.Extra.List
+    CabalGild.Extra.ModuleName
+    CabalGild.Extra.Name
+    CabalGild.Extra.SectionArg
+    CabalGild.Extra.String
     CabalGild.Main
-    CabalGild.Monad
-    CabalGild.Options
-    CabalGild.Parser
-    CabalGild.Pragma
-    CabalGild.Refactoring
-    CabalGild.Refactoring.ExpandExposedModules
-    CabalGild.Refactoring.Fragments
-    CabalGild.Refactoring.GlobFiles
-    CabalGild.Refactoring.Type
-    VersionInterval
+    CabalGild.Type.Block
+    CabalGild.Type.Chunk
+    CabalGild.Type.Comment
+    CabalGild.Type.Config
+    CabalGild.Type.Flag
+    CabalGild.Type.Line
+    CabalGild.Type.List
+    CabalGild.Type.Mode
+    CabalGild.Type.Pragma
+    CabalGild.Type.Set
+    CabalGild.Type.SomeParsecParser
 
 executable cabal-gild
-  import:         executable
+  import: executable
   hs-source-dirs: source/executable
-  main-is:        Main.hs
+  main-is: Main.hs
 
 test-suite cabal-gild-test-suite
-  import:         executable
-  type:           exitcode-stdio-1.0
+  import: executable
+  type: exitcode-stdio-1.0
   hs-source-dirs: source/test-suite
-  main-is:        Main.hs
-  other-modules:
-    CabalGild.Test.Golden
-    CabalGild.Test.Interval
-
-  -- dependencies in library
+  main-is: Main.hs
   build-depends:
-    , bytestring
-    , Cabal-syntax
-    , containers
-    , filepath
-    , QuickCheck ^>=2.14.3
-    , tasty ^>=1.5
-    , tasty-hunit ^>=0.10.1
-    , tasty-quickcheck ^>=0.10.3
-
--- end file comment
+    bytestring,
+    containers,
+    exceptions,
+    filepath,
+    hspec ^>=2.11.7,
+    transformers,
