--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -24,7 +24,7 @@ flag pedantic
   manual: True
 
 common library
-  build-depends: base ^>=4.17.0.0
+  build-depends: base ^>=4.17.0.0 || ^>=4.18.0.0 || ^>=4.19.0.0
   default-language: Haskell2010
   ghc-options:
     -Weverything
@@ -59,12 +59,11 @@ library
   other-modules: Paths_cabal_gild
   autogen-modules: Paths_cabal_gild
   build-depends:
-    Cabal-syntax ^>=3.8.1.0,
+    Cabal-syntax ^>=3.8.1.0 || ^>=3.10.1.0,
     bytestring ^>=0.11.3.1 || ^>=0.12.0.2,
     containers ^>=0.6.6,
     directory ^>=1.3.7.1,
     exceptions ^>=0.10.5,
-    file-io ^>=0.1.1,
     filepath ^>=1.4.2.2,
     pretty ^>=1.1.3.6,
     text ^>=2.0.1 || ^>=2.1,
