--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -65,6 +65,7 @@ library
     directory ^>=1.3.7.1,
     exceptions ^>=0.10.5,
     filepath ^>=1.4.2.2,
+    parsec ^>=3.1.16.1,
     pretty ^>=1.1.3.6,
     text ^>=2.0.1 || ^>=2.1,
     transformers ^>=0.5.6.2 || ^>=0.6.1.0,
@@ -86,6 +87,7 @@ library
     CabalGild.Exception.CheckFailure
     CabalGild.Exception.InvalidMode
     CabalGild.Exception.InvalidOption
+    CabalGild.Exception.ParseError
     CabalGild.Exception.UnexpectedArgument
     CabalGild.Exception.UnknownOption
     CabalGild.Extra.Either
