--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -84,6 +84,7 @@ library
     CabalGild.Class.MonadRead
     CabalGild.Class.MonadWalk
     CabalGild.Class.MonadWrite
+    CabalGild.Compat.Cabal
     CabalGild.Exception.CheckFailure
     CabalGild.Exception.InvalidMode
     CabalGild.Exception.InvalidOption
