Fix test on Windows

--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -126,5 +126,6 @@ test-suite cabal-gild-test-suite
     bytestring,
     containers,
     exceptions,
+    filepath,
     hspec ^>=2.11.7,
     transformers,
