Eat our own dog food

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -77,6 +77,9 @@
         },
         {
           "run": "cabal run -- cabal-gild-test-suite --randomize --strict"
+        },
+        {
+          "run": "cabal run -- cabal-gild --input cabal-gild.cabal --mode check"
         }
       ],
       "strategy": {
