Check formatting using built executable instead of action

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -77,6 +77,9 @@
         },
         {
           "run": "cabal run -- cabal-gild-test-suite --randomize --strict"
+        },
+        {
+          "run": "cabal run -- cabal-gild --input cabal-gild.cabal --mode check"
         }
       ],
       "strategy": {
@@ -147,21 +150,6 @@
           "with": {
             "fail-on": "status"
           }
-        }
-      ]
-    },
-    "gild": {
-      "name": "Gild",
-      "runs-on": "ubuntu-22.04",
-      "steps": [
-        {
-          "uses": "actions/checkout@v4"
-        },
-        {
-          "uses": "tfausak/cabal-gild-setup-action@v1"
-        },
-        {
-          "run": "cabal-gild --input cabal-gild.cabal --mode check"
         }
       ]
     },
