Rename "format" to "format fields"

--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -72,6 +72,7 @@ library
     CabalGild.Action.Discover
     CabalGild.Action.ExtractComments
     CabalGild.Action.Format
+    CabalGild.Action.FormatFields
     CabalGild.Action.GetCabalVersion
     CabalGild.Action.ReflowText
     CabalGild.Action.RemovePositions
