--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -69,9 +69,8 @@ library
   -- cabal-gild: discover source/library
   exposed-modules:
     CabalGild.Action.AttachComments
-    CabalGild.Action.Discover
+    CabalGild.Action.EvaluatePragmas
     CabalGild.Action.ExtractComments
-    CabalGild.Action.Format
     CabalGild.Action.FormatFields
     CabalGild.Action.GetCabalVersion
     CabalGild.Action.ReflowText
