Consider CRLF input as formatted when in check mode (#12)
* Check formatting using built executable instead of action

* Link to announcement post

* Rename "reindent" to "reflow text"

* Rename "format" to "format fields"

* Rename "discover" to "evaluate pragmas"

* Output diff when checking fails

* Revert "Output diff when checking fails"

This reverts commit aad04714dcfe872eba04caae7867a01119000555.

* Consider CRLF to equal LF when checking

* Add documentation and test case

--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -69,11 +69,11 @@ library
   -- cabal-gild: discover source/library
   exposed-modules:
     CabalGild.Action.AttachComments
-    CabalGild.Action.Discover
+    CabalGild.Action.EvaluatePragmas
     CabalGild.Action.ExtractComments
-    CabalGild.Action.Format
+    CabalGild.Action.FormatFields
     CabalGild.Action.GetCabalVersion
-    CabalGild.Action.Reindent
+    CabalGild.Action.ReflowText
     CabalGild.Action.RemovePositions
     CabalGild.Action.Render
     CabalGild.Class.MonadLog
