Strip blank spaces from fields in curly bracket sections

--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -76,6 +76,7 @@ library
     CabalGild.Action.ReflowText
     CabalGild.Action.RemovePositions
     CabalGild.Action.Render
+    CabalGild.Action.StripBlanks
     CabalGild.Class.MonadLog
     CabalGild.Class.MonadRead
     CabalGild.Class.MonadWalk
