--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -73,7 +73,7 @@
           "run": "cabal run -- cabal-gild-test-suite --randomize --strict"
         },
         {
-          "run": "cabal run -- cabal-gild --input cabal-gild.cabal --mode check"
+          "run": "artifact/cabal-gild --input cabal-gild.cabal --mode check"
         }
       ],
       "strategy": {
