--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -167,6 +167,9 @@
       ]
     },
     "release-todo": {
+      "env": {
+        "GILD": "cabal-gild-${{ github.event.release.tag_name }}"
+      },
       "name": "Release TODO",
       "needs": "build",
       "runs-on": "ubuntu-22.04",
@@ -175,7 +178,25 @@
           "uses": "actions/download-artifact@v4"
         },
         {
-          "run": "ls -l"
+          "run": "mkdir $GILD-darwin-x64"
+        },
+        {
+          "run": "mv cabal-gild-${{ github.sha }}-macos-13-9.8.1/cabal-gild $GILD-darwin-x64"
+        },
+        {
+          "run": "chmod +x $GILD-darwin-x64/cabal-gild"
+        },
+        {
+          "run": "tar -cvf $GILD-darwin-x64.tar $GILD-darwin-x64"
+        },
+        {
+          "run": "gzip $GILD-darwin-x64.tar"
+        },
+        {
+          "uses": "actions/upload-artifact@v4",
+          "with": {
+            "path": "$GILD-darwin-x64.tar.gz"
+          }
         }
       ]
     },
