--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -178,24 +178,13 @@
           "uses": "actions/download-artifact@v4"
         },
         {
-          "run": "mkdir $GILD-darwin-x64"
-        },
-        {
-          "run": "mv cabal-gild-${{ github.sha }}-macos-13-9.8.1/cabal-gild $GILD-darwin-x64"
-        },
-        {
-          "run": "chmod +x $GILD-darwin-x64/cabal-gild"
-        },
-        {
-          "run": "tar -cvf $GILD-darwin-x64.tar $GILD-darwin-x64"
-        },
-        {
-          "run": "gzip $GILD-darwin-x64.tar"
+          "run": "chmod +x cabal-gild && tar --auto-compress --create --file ../$GILD-darwin-x64.tgz cabal-gild",
+          "working-directory": "cabal-gild-${{ github.sha }}-macos-13-9.8.1"
         },
         {
           "uses": "actions/upload-artifact@v4",
           "with": {
-            "path": "$GILD-darwin-x64.tar.gz"
+            "path": "${{ env.GILD }}-darwin-x64.tar.gz"
           }
         }
       ]
