Introduce severity type

--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -115,6 +115,7 @@ library
     CabalGild.Type.PkgconfigVersionRange
     CabalGild.Type.Pragma
     CabalGild.Type.Set
+    CabalGild.Type.Severity
     CabalGild.Type.SomeParsecParser
     CabalGild.Type.TestedWith
     CabalGild.Type.VersionRange
