Check for invalid configs

--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -82,6 +82,7 @@ library
     CabalGild.Class.MonadWalk
     CabalGild.Class.MonadWrite
     CabalGild.Exception.CheckFailure
+    CabalGild.Exception.InvalidConfig
     CabalGild.Exception.InvalidMode
     CabalGild.Exception.InvalidOption
     CabalGild.Exception.ParseError
